# vecno-cpu-miner

./: Cargo.toml  README.md  build.rs
.github/workflows/: deploy.yaml
proto/: messages.proto  p2p.proto  rpc.proto
src/: cli.rs  client.rs  main.rs  miner.rs  pow.rs  swap_rust.rs  target.rs  vecnod_messages.rs
src/pow/: hasher.rs  mem_hash.rs
