[package]
name = "vecno-cpu-miner"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Yoshiki>"]
repository = "https://github.com/Vecno-Foundation/vecno-cpu-miner"
readme = "README.md"
description = "A high performance CPU-miner for the Vecno Blockchain"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
tokio-stream = "0.1"
num_cpus = "1"
rand = "0.8"
rand_chacha = "0.3.1"
blake3 = "1.8.2"
sha3 = "0.10.8"
clap = { version = "4", features = ["derive", "color"] }
log = "0.4"
env_logger = "0.10"
arc-swap = "1.6.0"
parking = { package = "parking_lot", version = "0.12", optional = true }
shuttle = { version = "0.6", optional = true }
chrono = "0.4"
hex = "0.4.3"

[features]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tonic-build = { version = "0.10", default-features = false, features = ["prost", "transport"] }
cc = "1"

[dev-dependencies]
sha3 = "0.10"
